--- a/bower.json
+++ b/bower.json
@@ -14,10 +14,25 @@
     "iron-selector": "PolymerElements/iron-selector#2.0-preview",
     "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
     "polymer": "Polymer/polymer#^2.0.0-rc.3",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7",
+    "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0"
   },
   "resolutions": {
-    "polymer": "^2.0.0-rc.3"
+    "polymer": "^2.0.0-rc.3",
+    "iron-flex-layout": "1 - 2",
+    "iron-resizable-behavior": "1 - 2",
+    "iron-meta": "1 - 2",
+    "iron-selector": "1 - 2",
+    "iron-a11y-keys-behavior": "1 - 2",
+    "paper-styles": "1 - 2",
+    "paper-behaviors": "1 - 2",
+    "iron-behaviors": "1 - 2",
+    "iron-checked-element-behavior": "1 - 2",
+    "iron-validatable-behavior": "1 - 2",
+    "iron-form-element-behavior": "1 - 2",
+    "paper-ripple": "1 - 2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
