pacs-pull workflow

--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "chips-api": "FNNDSC/chips-api",
     "paper-input": "PolymerElements/paper-input#^2.0.0",
-    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0"
+    "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
+    "vaadin-grid": "v3.0.0-alpha1",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.0.0"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.3",
@@ -35,7 +37,8 @@
     "iron-checked-element-behavior": "1 - 2",
     "iron-validatable-behavior": "1 - 2",
     "iron-form-element-behavior": "1 - 2",
-    "paper-ripple": "1 - 2"
+    "paper-ripple": "1 - 2",
+    "iron-scroll-target-behavior": "^v2.0.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
