--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ node_js:
   - "6"
 install:
   - npm install
+  - bower install
   - npm install -g polymer-cli
   - polymer install
 before_script:
   - npm run lint
 script:
-  - xvfb-run npm run test
-  - xvfb-run npm run test:integration
+  - polymer build --verbose --preset es5-bundled
