--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   },
   "scripts": {
     "lint": "npm run lint:javascript",
-    "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore",
-    "test": "polymer test",
-    "test:integration": "polymer build # test that psk builds without error with the CLI"
+    "lint:javascript": "eslint . --ext js,html --ignore-path .gitignore"
   }
 }
