--- a/bower.json
+++ b/bower.json
@@ -5,14 +5,14 @@
   ],
   "license": "https://polymer.github.io/LICENSE.txt",
   "dependencies": {
-    "app-layout": "PolymerElements/app-layout#2.0-preview",
-    "app-route": "PolymerElements/app-route#2.0-preview",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0-preview",
-    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0-preview",
-    "iron-media-query": "PolymerElements/iron-media-query#2.0-preview",
-    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
-    "iron-selector": "PolymerElements/iron-selector#2.0-preview",
-    "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
+    "app-layout": "PolymerElements/app-layout#2.0",
+    "app-route": "PolymerElements/app-route#2.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#2.0",
+    "iron-iconset-svg": "PolymerElements/iron-iconset-svg#2.0",
+    "iron-media-query": "PolymerElements/iron-media-query#2.0",
+    "iron-pages": "PolymerElements/iron-pages#2.0",
+    "iron-selector": "PolymerElements/iron-selector#2.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#2.0",
     "polymer": "Polymer/polymer#^2.0.0-rc.3",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.7",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.0",
@@ -32,20 +32,6 @@
     "paper-item": "PolymerElements/paper-item#^2.0.0",
     "web-animations-js": "web-animations/web-animations-js#2.2.5",
     "paper-tabs": "PolymerElements/paper-tabs#^2.0.0"
-  },
-  "resolutions": {
-    "polymer": "^2.0.0-rc.3",
-    "iron-flex-layout": "1 - 2",
-    "iron-resizable-behavior": "1 - 2",
-    "iron-meta": "1 - 2",
-    "iron-selector": "1 - 2",
-    "iron-a11y-keys-behavior": "1 - 2",
-    "paper-styles": "1 - 2",
-    "paper-behaviors": "1 - 2",
-    "iron-scroll-target-behavior": "^v2.0.0",
-    "iron-iconset-svg": "1 - 2",
-    "iron-icon": "1 - 2",
-    "paper-icon-button": "1 - 2"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
