Enable ctrl + mouse move window level

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "Polymer": true,
     "THREE": true,
     "AMI": true,
-    "CHIPSPluginBehavior": true
+    "CHIPSPluginBehavior": true,
+    "Highcharts": true
   }
 }
