--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "chips-api": "FNNDSC/chips-api",
     "paper-input": "PolymerElements/paper-input#^2.0.0",
     "paper-spinner": "PolymerElements/paper-spinner#^2.0.0",
-    "vaadin-grid": "v3.0.0-alpha1",
+    "vaadin-grid": "v4.0.0-alpha3",
     "iron-collapse": "PolymerElements/iron-collapse#^2.0.0",
     "three.js": "mrdoob/three.js#dev",
     "ami": "fnndsc/ami#dev",
@@ -36,7 +36,8 @@
     "moment-element": "abdonrd/moment-element#^2.0.0",
     "paper-progress": "PolymerElements/paper-progress#^2.0.1",
     "vaadin-split-layout": "v3.0.0-alpha1",
-    "highcharts": "^5.0.14"
+    "highcharts": "^5.0.14",
+    "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
