--- a/bower.json
+++ b/bower.json
@@ -39,10 +39,15 @@
     "highcharts": "^5.0.14",
     "vaadin-material-theme": "vaadin/vaadin-material-theme#^0.3.0",
     "wc-series-preview": "FNNDSC/wc-series-preview#master",
-    "wc-periodic-logo": "FNNDSC/wc-periodic-logo#master"
+    "wc-periodic-logo": "FNNDSC/wc-periodic-logo#master",
+    "wc-viewer-2d": "fnndsc/wc-viewer-2d#master"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#^6.0.0-prerelease.7"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "paper-icon-button": "^2.2.0",
+    "chips-api": "master"
+  }
 }
